[gd_scene load_steps=5 format=3 uid="uid://dpl67feoxnf11"]

[ext_resource type="Script" uid="uid://dtqgpfm5ommaw" path="res://script/entity/enemy/explode.gd" id="1_vlxgw"]
[ext_resource type="PackedScene" uid="uid://ldgk6xu6plye" path="res://prefabs/animation/particles/explosion_particle.tscn" id="2_ql5h0"]
[ext_resource type="Script" uid="uid://bd1oxv0hkmcqm" path="res://script/entity/entity_data.gd" id="3_mcdmu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ql5h0"]
radius = 112.0

[node name="Explode" type="Node2D"]
script = ExtResource("1_vlxgw")

[node name="Explosion Particle" parent="." instance=ExtResource("2_ql5h0")]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_ql5h0")

[node name="EntityData" type="Node" parent="."]
script = ExtResource("3_mcdmu")
max_health = 1
health = 1
attack = 30
knockback_velocity = Vector2(0, 0)
metadata/_custom_type_script = "uid://bd1oxv0hkmcqm"

[node name="Queue Free Timer" type="Timer" parent="."]
wait_time = 0.65
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="on_area_entered"]
[connection signal="timeout" from="Queue Free Timer" to="." method="queue_free"]
